--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
 	"scripts": {
-		"build": "wp-scripts build --webpack-copy-php",
+		"build": "wp-scripts build --webpack-copy-php && webpack --config webpack.custom.js",
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start --webpack-copy-php"
+		"start": "wp-scripts start --webpack-copy-php && webpack --config webpack.custom.js"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^29.0.0"
+		"@wordpress/scripts": "^29.0.0",
+		"webpack": "^5.94.0",
+		"webpack-cli": "^5.1.4"
 	},
 	"dependencies": {
 		"@wordpress/env": "^10.7.0"
